fix: added change dir command

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,4 @@ before_script:
   - curl -sSfL -o ~/.phpenv/versions/hhvm/bin/phpunit https://phar.phpunit.de/phpunit-5.7.phar
 script:
   - php -f test.php
-  - php tests/codecept.phar run
+  - cd tests; php codecept.phar run
