--- a/tests/codeception.yml
+++ b/tests/codeception.yml
@@ -1,9 +1,9 @@
 paths:
-    tests: ./
-    output: ./_output
-    data: ./_data
-    support: ./_support
-    envs: ./_envs
+    tests: 
+    output: _output
+    data: _data
+    support: _support
+    envs: _envs
 actor_suffix: Tester
 extensions:
     enabled:
