--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,5 @@ before_install:
 script:
   - php -f test.php
   - phpunit --version
-  - cd tests; php codecept.phar --version; cd ..
-  - cd tests; php codecept.phar run; cd ..
+#  - cd tests; php codecept.phar --version; cd ..
+  - php tests/codecept.phar run
