chore: change path

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,6 @@ script:
   - php -f test.php
   - phpunit --version
 #  - cd tests; php codecept.phar --version; cd ..
-  - php tests/codecept.phar run
+  - cd tests
+  - php codecept.phar run
+  - cd ..
