--- a/.htaccess
+++ b/.htaccess
@@ -7,7 +7,7 @@ ErrorDocument 403 /index.php?error=403
 ErrorDocument 404 /index.php?error=404
 ErrorDocument 500 /index.php?error=500
 
-#RewriteEngine on
+RewriteEngine on
 
 #remove trailing slash
 #for site in webroot
