--- a/.htaccess
+++ b/.htaccess
@@ -11,7 +11,7 @@ RewriteEngine on
 
 #remove trailing slash
 #for site in webroot
-#RewriteBase /
+RewriteBase /
 #for site in subfolder
 #RewriteBase /ufo/
 #RewriteCond %{HTTP_HOST} (.*)
