chore: added RewriteRule in .htaccess

--- a/.htaccess
+++ b/.htaccess
@@ -14,9 +14,9 @@ RewriteEngine on
 RewriteBase /
 #for site in subfolder
 #RewriteBase /ufo/
-#RewriteCond %{HTTP_HOST} (.*)
-#RewriteCond %{REQUEST_URI} /$ [NC]
-#RewriteRule ^(.*)(/)$ $1 [L,R=301]
+RewriteCond %{HTTP_HOST} (.*)
+RewriteCond %{REQUEST_URI} /$ [NC]
+RewriteRule ^(.*)(/)$ $1 [L,R=301]
 
 #RewriteCond %{REQUEST_FILENAME} !-f
 #RewriteCond %{REQUEST_FILENAME} !-d
