chore: added another RewriteRule in .htaccess

--- a/.htaccess
+++ b/.htaccess
@@ -18,10 +18,10 @@ RewriteCond %{HTTP_HOST} (.*)
 RewriteCond %{REQUEST_URI} /$ [NC]
 RewriteRule ^(.*)(/)$ $1 [L,R=301]
 
-#RewriteCond %{REQUEST_FILENAME} !-f
-#RewriteCond %{REQUEST_FILENAME} !-d
-#RewriteCond %{REQUEST_FILENAME} !-l
-#RewriteRule ^(.*)$ index.php?path=/$1 [L,QSA]
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME} !-l
+RewriteRule ^(.*)$ index.php?path=/$1 [L,QSA]
 
 #comment on production or on CGI web-server
 #php_flag display_errors on
