--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,8 @@ before_script:
   - sudo apt-get install apache2 libapache2-mod-fastcgi
   # enable php-fpm
   - sudo cp ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.conf.default ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.conf
-  # - cat ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.conf
-  - sudo ls -la /home/travis/.phpenv/versions/7.2.10/etc/php-fpm.d
+  - cat ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.conf
+  - sudo ls -la /home/travis/.phpenv/versions/7.2.10/etc/php-fpm
   - sudo a2enmod rewrite actions fastcgi alias
   - echo "cgi.fix_pathinfo = 1" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
   - sudo sed -i -e "s,www-data,travis,g" /etc/apache2/envvars
