--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ before_script:
   - sudo apt-get install apache2 libapache2-mod-fastcgi
   # enable php-fpm
   - sudo cp ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.conf.default ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.conf
+  - sudo cp ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.d/www.conf.default ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.d/www.conf
   - cat ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.conf
   - sudo ls -la /home/travis/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.d
   - sudo a2enmod rewrite actions fastcgi alias
