--- a/.htaccess
+++ b/.htaccess
@@ -1,27 +1,27 @@
-#Options -Indexes
-#Options +FollowSymlinks
-#DirectoryIndex index.php
+Options -Indexes
+Options +FollowSymlinks
+DirectoryIndex index.php
 
-#ErrorDocument 401 /index.php?error=401
-#ErrorDocument 403 /index.php?error=403
-#ErrorDocument 404 /index.php?error=404
-#ErrorDocument 500 /index.php?error=500
+ErrorDocument 401 /index.php?error=401
+ErrorDocument 403 /index.php?error=403
+ErrorDocument 404 /index.php?error=404
+ErrorDocument 500 /index.php?error=500
 
-#RewriteEngine on
+RewriteEngine on
 
 #remove trailing slash
 #for site in webroot
-#RewriteBase /
+RewriteBase /
 #for site in subfolder
 #RewriteBase /ufo/
-#RewriteCond %{HTTP_HOST} (.*)
-#RewriteCond %{REQUEST_URI} /$ [NC]
-#RewriteRule ^(.*)(/)$ $1 [L,R=301]
+RewriteCond %{HTTP_HOST} (.*)
+RewriteCond %{REQUEST_URI} /$ [NC]
+RewriteRule ^(.*)(/)$ $1 [L,R=301]
 
-#RewriteCond %{REQUEST_FILENAME} !-f
-#RewriteCond %{REQUEST_FILENAME} !-d
-#RewriteCond %{REQUEST_FILENAME} !-l
-#RewriteRule ^(.*)$ index.php?path=/$1 [L,QSA]
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME} !-l
+RewriteRule ^(.*)$ index.php?path=/$1 [L,QSA]
 
 #comment on production or on CGI web-server
 #php_flag display_errors on
