--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,8 @@ before_script:
   #
   # test extensions
   - echo "extension=memcached.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
+  # ^^^ OK
+  - echo "extension=memcache.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
 script:
   - php -f test.php
   - phpunit --version
