feat: pecl install memcache

--- a/.travis.yml
+++ b/.travis.yml
@@ -35,8 +35,9 @@ before_script:
   # test extensions
   - echo "extension=memcached.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
   # ^^^ OK
-  - echo "extension=memcache.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
+  # - echo "extension=memcache.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
   # ^^^ PHP Warning:  PHP Startup: Unable to load dynamic library 'memcache.so' ...
+  - pecl install memcache -y
 script:
   - php -f test.php
   - phpunit --version
