--- a/.travis.yml
+++ b/.travis.yml
@@ -37,7 +37,7 @@ before_script:
   # test extensions
   - echo "extension=memcached.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
   # ^^^ OK
-  # - echo "extension=memcache.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
+  - echo "extension=memcache.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
   # ^^^ PHP Warning:  PHP Startup: Unable to load dynamic library 'memcache.so' ...
   # - echo 'y' | pecl install -f memcache-3.0.8
   # ^^^ /tmp/pear/install/memcache/memcache_pool.h:45:47: fatal error: ext/standard/php_smart_str_public.h: No such file or directory
